@@ -1,3 +1,9 @@
+2005-08-03  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Gui/TestPad.cs:
+	* Gui/TestResultsPad.cs: Use the new command service to show
+	context menus.
+
 2005-07-27  Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* Project/NUnitAssemblyGroupProject.cs: Track api changes.
